# BrainbaseTakehome

./: README.md
brainbase/: .env  .gitignore  README.md  amadeus_api.py  app.py  chatbot.py  pyproject.toml  tools_for_open_ai.py
brainbase/src/: chatbot.py
