[tool.poetry]
name = "brainbase"
version = "0.1.0"
description = ""
authors = ["brianthemessiah"]
readme = "README.md"
packages = [
    { include = "brainbase" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
amadeus = "^11.0.0"
openai = "^1.65.1"
flask = "^3.1.0"
flask-cors = "^5.0.1"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
